Repair Ohsome scripts - print value for timestamp not found

--- a/notebooks-blds/blds-download-export-data-ver2-sel-countries.ipynb
+++ b/notebooks-blds/blds-download-export-data-ver2-sel-countries.ipynb
@@ -345,7 +345,7 @@
     "        \"groupByKey\": \"source\",\n",
     "        \"groupByValues\": \"microsoft/BuildingFootprints,esri/Google_Africa_Buildings\",\n",
     "        \"format\": \"json\",\n",
-    "        \"time\": \"2018-01-01/2023-06-01/P1Y\",  # \"2018-01-01/2023-06-01/P1Y\" 2023-06-01\n",
+    "        \"time\": \"2023-06-30\",  # \"2018-01-01/2023-06-30/P1Y\" 2023-06-30\n",
     "        }\n",
     "    headers = {\n",
     "        \"accept\": \"application/json\",\n",
@@ -439,9 +439,9 @@
     "\n",
     "    for elem in data:\n",
     "        if elem['groupByObject'][1] == 'remainder':\n",
-    "            rem_value_to_add = find_value(elem, '2023-06-01T00:00:00Z')\n",
+    "            rem_value_to_add = find_value(elem, '2023-06-30T00:00:00Z')\n",
     "        elif elem['groupByObject'][1] == 'source=microsoft/BuildingFootprints':\n",
-    "            ai_value_to_add = find_value(elem, '2023-06-01T00:00:00Z')\n",
+    "            ai_value_to_add = find_value(elem, '2023-06-30T00:00:00Z') # T00:00:00Z\n",
     "\n",
     "    blds_total = rem_value_to_add + ai_value_to_add\\\n",
     "        if rem_value_to_add is not None and ai_value_to_add is not None else None\n",
@@ -491,6 +491,7 @@
     "    for result in elem['result']:\n",
     "        if result['timestamp'] == timestamp:\n",
     "            return result['value']\n",
+    "    print(f\"Value for {timestamp} not found.\")\n",
     "    return None\n",
     "\n",
     "\n",
@@ -588,22 +589,239 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 72%|███████▏  | 150/209 [58:46<1:16:04, 77.37s/it]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46 CZE\n",
-      "47 DEU\n",
-      "53 VNM\n",
-      "95 NGA\n",
-      "148 US1\n",
-      "Countries not in downloaded data: []\n"
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n",
+      "Waiting for Wi-Fi connection to be restored...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [08:27<00:00, 101.42s/it]"
+      "100%|██████████| 209/209 [1:42:25<00:00, 29.40s/it]   \n"
      ]
     },
     {
@@ -611,13 +829,6 @@
      "output_type": "stream",
      "text": [
       "Finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -652,9 +863,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping the script.\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\milan\\general_py_venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3386: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "if user_d_format == 0:  # 0 for json format\n",
     "    with open(f\"downloaded-data-json\\\\blds_{fin_file_name}.json\", \"r\") as file:\n",
@@ -666,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
