--- a/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb
+++ b/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb
@@ -302,7 +302,7 @@
     "        \"groupByKey\": \"source\",\n",
     "        \"groupByValues\": \"maxar\",\n",
     "        \"format\": \"json\",\n",
-    "        \"time\": \"2018-01-01/2023-01-01/P1Y\",\n",
+    "        \"time\": \"2023-06-30\",  # \"2018-01-01/2023-06-30/P1Y\" 2023-06-30\n",
     "    }\n",
     "    headers = {\n",
     "        \"accept\": \"application/json\",\n",
@@ -394,9 +394,9 @@
     "\n",
     "    for elem in data:\n",
     "        if elem['groupByObject'][1] == 'remainder':\n",
-    "            rem_value_to_add = find_value(elem, '2023-01-01T00:00:00Z')\n",
+    "            rem_value_to_add = find_value(elem, '2023-06-30T00:00:00Z')\n",
     "        elif elem['groupByObject'][1] == 'source=maxar':\n",
-    "            ai_value_to_add = find_value(elem, '2023-01-01T00:00:00Z')\n",
+    "            ai_value_to_add = find_value(elem, '2023-06-30T00:00:00Z')\n",
     "\n",
     "    roads_total = rem_value_to_add + ai_value_to_add\\\n",
     "        if rem_value_to_add is not None and ai_value_to_add is not None else None\n",
@@ -448,6 +448,7 @@
     "    for result in elem['result']:\n",
     "        if result['timestamp'] == timestamp:\n",
     "            return result['value']\n",
+    "    print(f\"Value for {timestamp} not found.\")\n",
     "    return None\n",
     "\n",
     "\n",
@@ -548,32 +549,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are trying to access a key that does not exist. Please try to use a geojson format in different structure.\n",
-      "Countries not in downloaded data: ['US1', 'NGA', 'DEU', 'CZE', 'VNM']\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
+      "100%|██████████| 209/209 [35:02<00:00, 10.06s/it] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading finished\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Finished!\n"
      ]
     }
    ],
@@ -612,14 +598,27 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'downloaded-data-json\\\\roads_geojson-asia-states.json'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping the script.\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\milan\\OneDrive - MUNI\\VŠ\\PhD\\Zahraniční stáž\\Work\\HeiGIT_notebooks\\analysis\\ai-assisted-osm-mapping-stats\\notebooks-roads\\roads-download-export-data-ver2-sel-countries.ipynb Cell 19\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb#X24sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mif\u001b[39;00m user_d_format \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:  \u001b[39m# 0 for json format\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb#X24sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mdownloaded-data-json\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mroads_\u001b[39m\u001b[39m{\u001b[39;00mgeojson_dic[user_d_spec]\u001b[39m}\u001b[39;00m\u001b[39m.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb#X24sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         dow_res \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(file)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-roads/roads-download-export-data-ver2-sel-countries.ipynb#X24sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'downloaded-data-json\\\\roads_geojson-asia-states.json'"
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\milan\\general_py_venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3386: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
