--- a/notebooks/building_source_tags.ipynb
+++ b/notebooks/building_source_tags.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "5849ca62",
    "metadata": {},
    "outputs": [
@@ -204,27 +204,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>source=cuzk:ruian</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
+       "      <th>2024-01-01</th>\n",
        "      <td>352957.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>source=cuzk:km</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
+       "      <th>2024-01-01</th>\n",
        "      <td>108645.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>remainder</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
+       "      <th>2024-01-01</th>\n",
        "      <td>80474.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>source=ruian</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
+       "      <th>2024-01-01</th>\n",
        "      <td>7184.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>source=www.geoportal.gov.pl</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
+       "      <th>2024-01-01</th>\n",
        "      <td>5707.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -234,27 +234,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>source=http://www.osada-sniezka.com/</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
+       "      <th>2024-01-01</th>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>source=http://szukaj.sluzbazdrowia.pl/Zaklad-opiekunczo-leczniczy/Szklarska-poreba/Ul-szpitalna-1/j2467.html</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
+       "      <th>2024-01-01</th>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>source=http://kopa.com.pl</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
+       "      <th>2024-01-01</th>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>source=http://izer-med.com.pl/</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
+       "      <th>2024-01-01</th>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>source=www.geoportal.gov.pl;https://www.lsprojekt.pl/projekt-budowy-szkoly-podstawowej/;https://mapwarper.net/maps/77075</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
+       "      <th>2024-01-01</th>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -263,19 +263,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                                 value\n",
-       "tag                                                timestamp                          \n",
-       "source=cuzk:ruian                                  2024-01-01 00:00:00+00:00  352957.0\n",
-       "source=cuzk:km                                     2024-01-01 00:00:00+00:00  108645.0\n",
-       "remainder                                          2024-01-01 00:00:00+00:00   80474.0\n",
-       "source=ruian                                       2024-01-01 00:00:00+00:00    7184.0\n",
-       "source=www.geoportal.gov.pl                        2024-01-01 00:00:00+00:00    5707.0\n",
-       "...                                                                                ...\n",
-       "source=http://www.osada-sniezka.com/               2024-01-01 00:00:00+00:00       1.0\n",
-       "source=http://szukaj.sluzbazdrowia.pl/Zaklad-op... 2024-01-01 00:00:00+00:00       1.0\n",
-       "source=http://kopa.com.pl                          2024-01-01 00:00:00+00:00       1.0\n",
-       "source=http://izer-med.com.pl/                     2024-01-01 00:00:00+00:00       1.0\n",
-       "source=www.geoportal.gov.pl;https://www.lsproje... 2024-01-01 00:00:00+00:00       1.0\n",
+       "                                                                  value\n",
+       "tag                                                timestamp           \n",
+       "source=cuzk:ruian                                  2024-01-01  352957.0\n",
+       "source=cuzk:km                                     2024-01-01  108645.0\n",
+       "remainder                                          2024-01-01   80474.0\n",
+       "source=ruian                                       2024-01-01    7184.0\n",
+       "source=www.geoportal.gov.pl                        2024-01-01    5707.0\n",
+       "...                                                                 ...\n",
+       "source=http://www.osada-sniezka.com/               2024-01-01       1.0\n",
+       "source=http://szukaj.sluzbazdrowia.pl/Zaklad-op... 2024-01-01       1.0\n",
+       "source=http://kopa.com.pl                          2024-01-01       1.0\n",
+       "source=http://izer-med.com.pl/                     2024-01-01       1.0\n",
+       "source=www.geoportal.gov.pl;https://www.lsproje... 2024-01-01       1.0\n",
        "\n",
        "[112 rows x 1 columns]"
       ]
@@ -301,6 +301,29 @@
     "df = response.as_dataframe()\n",
     "df.sort_values(by=\"value\", inplace=True, ascending=False)\n",
     "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9e2b42",
+   "metadata": {},
+   "source": [
+    "# official tags\n",
+    "microsoft/BuildingFootprints\n",
+    "esri/Google_Africa_Buildings\n",
+    "esri/Google_Open_Buildings\n",
+    "\n",
+    "# tags probably identifying building generated by AI\n",
+    "AI\n",
+    "ML\n",
+    "fAIr\n",
+    "mapwith\n",
+    "\n",
+    "# tag possibly identifying building generated by AI - also for searching the typos and combination of other tags\n",
+    "footprint\n",
+    "microsoft\n",
+    "google\n",
+    "\n"
    ]
   },
   {
@@ -330,92 +353,22 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th>level_0</th>\n",
+       "      <th>index</th>\n",
        "      <th>tag</th>\n",
        "      <th>timestamp</th>\n",
-       "      <th></th>\n",
+       "      <th>value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>source=www.geoportal.gov.pl;https://www.lsprojekt.pl/projekt-budowy-szkoly-podstawowej/;https://mapwarper.net/maps/77075</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source=survey, mapbox</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source=cuzk:ruian; Bing</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source=cuzk:ruian;https://pivo-konrad.cz/o-nas/pivovarska-hospoda/</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source=cuzk:ruian;https://www.vratislavice.cz/kultura-a-vzdelavani/knihovna</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source=www.geoportal.gov.pl</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
-       "      <td>5707.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source=ruian</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
-       "      <td>7184.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>remainder</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
-       "      <td>80474.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source=cuzk:km</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
-       "      <td>108645.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source=cuzk:ruian</th>\n",
-       "      <th>2024-01-01 00:00:00+00:00</th>\n",
-       "      <td>352957.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>112 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                 value\n",
-       "tag                                                timestamp                          \n",
-       "source=www.geoportal.gov.pl;https://www.lsproje... 2024-01-01 00:00:00+00:00       1.0\n",
-       "source=survey, mapbox                              2024-01-01 00:00:00+00:00       1.0\n",
-       "source=cuzk:ruian; Bing                            2024-01-01 00:00:00+00:00       1.0\n",
-       "source=cuzk:ruian;https://pivo-konrad.cz/o-nas/... 2024-01-01 00:00:00+00:00       1.0\n",
-       "source=cuzk:ruian;https://www.vratislavice.cz/k... 2024-01-01 00:00:00+00:00       1.0\n",
-       "...                                                                                ...\n",
-       "source=www.geoportal.gov.pl                        2024-01-01 00:00:00+00:00    5707.0\n",
-       "source=ruian                                       2024-01-01 00:00:00+00:00    7184.0\n",
-       "remainder                                          2024-01-01 00:00:00+00:00   80474.0\n",
-       "source=cuzk:km                                     2024-01-01 00:00:00+00:00  108645.0\n",
-       "source=cuzk:ruian                                  2024-01-01 00:00:00+00:00  352957.0\n",
-       "\n",
-       "[112 rows x 1 columns]"
+       "Empty DataFrame\n",
+       "Columns: [level_0, index, tag, timestamp, value]\n",
+       "Index: []"
       ]
      },
      "metadata": {},
@@ -423,7 +376,22 @@
     }
    ],
    "source": [
-    "# filter tags for specific key words\n"
+    "keywords = [\n",
+    "    \"microsoft/BuildingFootprints\",\n",
+    "    \"esri/Google_Africa_Buildings\",\n",
+    "    \"esri/Google_Open_Buildings\",\n",
+    "    \"AI\",\n",
+    "    \"ML\",\n",
+    "    \"fAIr\",\n",
+    "    \"mapwith\",\n",
+    "    \"footprint\",\n",
+    "    \"microsoft\",\n",
+    "    \"google\"\n",
+    "    ]\n",
+    "\n",
+    "df.reset_index(inplace=True)\n",
+    "display(df[df[\"tag\"].str.contains(\"|\".join(keywords))])\n",
+    "\n"
    ]
   },
   {
@@ -452,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
